--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -7,4 +7,8 @@
     <listener>
         <listener-class>listener.cartSessionListener</listener-class>
     </listener>
+    
+    <listener>
+        <listener-class>listener.servletContextListener</listener-class>
+    </listener>
 </web-app>
